@@ -1,6 +1,7 @@
 0.11.0 (unreleased)
 ------
 * Ability to upload cookbooks to S3.
+* Add script to upload local files to S3 to migrate.
 * Change how items are indexed with the postgres indexer, to reduce the number
   of rows in the search_items table substantially (at the cost of possible
   differences in search results in a few weird corner cases).
@@ -10,6 +11,7 @@
   packages are built and how version numbers are determined.
 * Fix a long-standing annoyance where the log file would get truncated when
   goiardi started or restarted.
+* Allow passing environment variables to goiardi through the config file.
 
 0.10.4
 ------
